tests/compile_fail/field_num_value_is_minus.rs
use protowirers::*;

#[derive(Proto)]
struct Sample {
    #[def(field_num = -100, def_type = "int32")]
    s: u32,
}

fn main() {}
